Project finished (Lab1, Lab2, Unit tests, API tests)